# gpu-samples

hsa/0_Simple/agentInfo/: CMakeLists.txt  agentInfo.cpp
hsa/0_Simple/vectorCopy/: Makefile  vector_copy.c
image/blur/: blur.cpp  build.sh
image/grayscale/: build.sh  grayscale.cpp
miopen/convolution/: Makefile  README.md  conv.cpp
rocm/0_Simple/UnifiedMemoryStreams/: CMakeLists.txt  UnifiedMemoryStreams.cpp
rocm/0_Simple/asyncAPI/: CMakeLists.txt  asyncAPI.cpp
rocm/0_Simple/cdpSimplePrint/: CMakeLists.txt  cdpSimplePrint.cpp
rocm/0_Simple/cdpSimpleQuicksort/: CMakeLists.txt  cdpSimpleQuicksort.cpp
rocm/0_Simple/clock/: CMakeLists.txt  clock.cpp
rocm/0_Simple/clock_nvrtc/: CMakeLists.txt  clock_kernel.cpp
rocm/0_Simple/cppIntegration/: .gitignore  CMakeLists.txt  cppIntegration.cpp  cppIntegration_gold.cpp  main.cpp
rocm/0_Simple/cppOverload/: CMakeLists.txt  cppOverload.cpp
rocm/0_Simple/cudaNvSci/: CMakeLists.txt  imageKernels.cpp
rocm/0_Simple/cudaOpenMP/: CMakeLists.txt  cudaOpenMP.cpp
rocm/0_Simple/cudaTensorCoreGemm/: CMakeLists.txt  cudaTensorCoreGemm.cpp
rocm/0_Simple/fp16ScalarProduct/: CMakeLists.txt  fp16ScalarProduct.cpp
rocm/0_Simple/immaTensorCoreGemm/: CMakeLists.txt  immaTensorCoreGemm.cpp
rocm/0_Simple/inlinePTX/: CMakeLists.txt  inlinePTX.cpp
rocm/0_Simple/inlinePTX_nvrtc/: CMakeLists.txt  inlinePTX_kernel.cpp
rocm/0_Simple/matrixMul/: CMakeLists.txt  matrixMul.cpp
rocm/0_Simple/matrixMulCUBLAS/: CMakeLists.txt
rocm/0_Simple/matrixMulDrv/: CMakeLists.txt  matrixMul_kernel.cpp
rocm/0_Simple/matrixMul_nvrtc/: CMakeLists.txt  matrixMul_kernel.cpp
rocm/0_Simple/memMapIPCDrv/: CMakeLists.txt  memMapIpc_kernel.cpp
rocm/0_Simple/simpleAssert/: CMakeLists.txt  simpleAssert.cpp
rocm/6_Advanced/scan/: CMakeLists.txt  scan.cpp
rocm/Common/: helper_hip.h  helper_rocm.h
(+293 files in other folders)
